--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -5,7 +5,7 @@
     </startup>
   <connectionStrings>
     <add name="AdanpConnectionString"
-         connectionString="Data Source=adanp.db;"
+         connectionString="XXX"
          providerName="System.Data.SQLite;
          Connect Timeout= 30;"/>
   </connectionStrings>
