--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
   <connectionStrings>
     <add name="AdanpConnectionString"
          connectionString="XXX"
          providerName="System.Data.SQLite;
+         Connect Timeout= 30;"/>
+    <add name="ReleaseAdanpConnectionString"
+     connectionString="Data Source=adanp.db"
+     providerName="System.Data.SQLite;
+         Connect Timeout= 30;"/>
+    <add name="DebugAdanpConnectionString"
+     connectionString="Data Source=..\..\..\DB\adanp.db"
+     providerName="System.Data.SQLite;
          Connect Timeout= 30;"/>
   </connectionStrings>
 </configuration>
