--- a/WindowsFormsApplication/WindowsFormsApplication.csproj
+++ b/WindowsFormsApplication/WindowsFormsApplication.csproj
@@ -104,6 +104,12 @@
     <Compile Include="FormMenu.designer.cs">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormObterNomeAvaliador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormObterNomeAvaliador.Designer.cs">
+      <DependentUpon>FormObterNomeAvaliador.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormQuestoes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormObterNomeAvaliador.resx">
+      <DependentUpon>FormObterNomeAvaliador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormQuestoes.resx">
       <DependentUpon>FormQuestoes.cs</DependentUpon>
