Alteraçoes e correçoes de bug

--- a/WindowsFormsApplication/WindowsFormsApplication.csproj
+++ b/WindowsFormsApplication/WindowsFormsApplication.csproj
@@ -206,6 +206,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icone5-gd.png" />
+    <None Include="Resources\BackGround.png" />
     <Content Include="Ícone_ES_Trasp.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
