--- a/WindowsFormsApplication/WindowsFormsApplication.csproj
+++ b/WindowsFormsApplication/WindowsFormsApplication.csproj
@@ -151,6 +151,12 @@
     <Compile Include="FormResultado.Designer.cs">
       <DependentUpon>FormResultado.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSelecaoAvaliacao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSelecaoAvaliacao.Designer.cs">
+      <DependentUpon>FormSelecaoAvaliacao.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormSoftware.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -191,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormResultado.resx">
       <DependentUpon>FormResultado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSelecaoAvaliacao.resx">
+      <DependentUpon>FormSelecaoAvaliacao.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSoftware.resx">
       <DependentUpon>FormSoftware.cs</DependentUpon>
